Correction indentation + clearing